--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -1,8 +1,13 @@
 <%= render 'layouts/navbar2' %>
 <div class="container">
 <h1>Add new list</h1>
+
+
+
+
 <%= simple_form_for(@list) do |f| %>
   <%= f.input :name %>
+  <%= f.input :photo, as: :file %>
   <%= f.submit "Add new list!"%>
 <% end %>
 
