--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,3 +10,10 @@
 // Your CSS partials
 @import "components/index";
 @import "pages/index";
+
+
+.container-show {
+  width: 600px;
+  text-align: center;
+  background-image: url("../images/water.jpg");
+}
