--- a/app/assets/stylesheets/components/_card-category.scss
+++ b/app/assets/stylesheets/components/_card-category.scss
@@ -1,8 +1,8 @@
 .cards {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  width: 300px;
-  height: 300px;
+  // width: 300px;
+  // height: 300px;
   grid-gap: 16px;
   // margin: 0 auto;
 }
