--- a/app/views/bookmarks/new.html.erb
+++ b/app/views/bookmarks/new.html.erb
@@ -1,6 +1,6 @@
 <%= render 'layouts/navbar2' %>
 
-<div class="container">
+<div class="container-show">
 <h1>New bookmark</h1>
 <%= simple_form_for [@list, @bookmark] do |f| %>
   <%= f.association :movie %>
