--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -1,5 +1,5 @@
 <%= render 'layouts/navbar2' %>
-<div class="container">
+<div class="container-show">
 <h1>Add new list</h1>
 
 <%= simple_form_for(@list) do |f| %>
