--- a/app/assets/stylesheets/components/_card-category.scss
+++ b/app/assets/stylesheets/components/_card-category.scss
@@ -7,7 +7,15 @@
   // margin: 0 auto;
 }
 
+.move-icon {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+
+}
+
 .card-category {
+  position: relative;
   background-size: cover;
   background-position: center;
   height: 180px;
